# linkedlist

./: CMakeLists.txt
include/: -2_linkedlist.h
include/-2/: linkedlist_functions.h  linkedlist_shortcut.h  linkedlist_types.h
src/: d.c  s.c  x.c
